# Club-Intelligence-Hub

./: .gitignore  pyproject.toml
SpecMd/: ProjectRules.md  QuickStart.md  Specify.md  SpecifyDetail.md  Structure.md  projectname.md
SpecMd/spec/layer/: 1gateway.md  2mcp_tools.md
SpecMd/spec/workflow/: chat_mode_basic.md
app/: __init__.py
app/core/: __init__.py  llm.py  mcp_client.py
app/core/config/: agents.py  models.py
app/frontend/: index.html
app/gateway/: __init__.py  api.py
app/mcp_server/: __init__.py  server.py
app/mcp_server/backend1_adapter/: __init__.py  client.py
backend1/: main.py
