[project]
name = "club-ai-gateway"
version = "0.1.0"
description = "Club AI Hub / Club AI Gateway - FastAPI + MCP + OpenAI demo"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
    "fastmcp>=0.1,<1.0",
    "openai>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
only-include = ["app"]

[tool.hatch.build.targets.editable]
packages = ["app"]
only-include = ["app"]
